cambios en el index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css"> 
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
-    <title>principal</title>
+    <title>Pagina principal</title>
 </head>
 <body>
   <!--header-->
