--- a/carrito.html
+++ b/carrito.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- css de boostrap-->
     <link rel="stylesheet" href="bootstrap-5.1.0-dist/css/bootstrap.min.css">
-    <title>carrito</title>
+    <title>Carrito</title>
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/productos.css">
     <link rel="stylesheet" href="css/footer.css">
