--- a/carrito.html
+++ b/carrito.html
@@ -19,7 +19,7 @@
         <!--titulo-->
         <div class="lsc row justify-content-center">
             <div class="col-4">
-                <h1 >Compras del Carrito:</h1>
+                <h1 >Compras Del Carrito:</h1>
             </div>
             
         <h1>Usted no ha agregado ningún producto al carrito aun</h1>
