cambio radical en las funciones

--- a/vender.html
+++ b/vender.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-      <script src="../js/header.js"></script>
+      <script src="js/header.js"></script>
     </header>
     <section class="caja-producto">
         <div class="MC container">
