cambios drasticos y correciones con la base de datos y el php

--- a/vender.html
+++ b/vender.html
@@ -33,7 +33,7 @@
                   <label class="form-label">Tipo de Producto:</label>
                   <select class="form-select" name="categoria">
                     <!--1-->
-                      <option value ="domesticos">Productos Domesticos</option>
+                      <option value ="hogar">Productos Domesticos</option>
                     <!--2-->
                       <option value ="vestimenta">Vestimenta</option>
                     <!--3-->
@@ -91,7 +91,7 @@
                 
                 <div class="col-md-4">
                   <label class="form-label">Cantidad:</label>
-                  <input type="text" class="form-control" maxlength="9" name="precio">
+                  <input type="text" class="form-control" maxlength="9" name="cantidad">
                 </div>
                 
                 <div class="col-mb-3">
