--- a/vender.html
+++ b/vender.html
@@ -17,7 +17,7 @@
     <section class="caja-producto">
         <div class="MC container">
             <h1>Nuevo Producto</h1>
-            <form class="row g-3" action="php/registerp.php" method="POST" enctype="multipart/form-data">
+            <form class="row g-3" action="registerp.php" method="POST" enctype="multipart/form-data">
               <input type="hidden" name="idproducto" value="0">
                 
                 <div class="col-12">
