--- a/vender.html
+++ b/vender.html
@@ -27,7 +27,8 @@
                 </div>
                 <div class="col-mb-3">
                     <label class="form-label">imagenes del producto</label>
-                    <input class="form-control" id ="Files"type="file"  multiple accept="image/*,.webp" name="imagenes[]" multiple>
+                    <input type="Hidden" name="MAX_FILE_SIZE" value="5120000">
+                    <input class="form-control" id ="Files" type="file" accept="image/*,.webp" name="imagenes[]" multiple>
                    
                   </div>
                 <div class="col-md-6">
