--- a/vender.html
+++ b/vender.html
@@ -28,7 +28,7 @@
                 <div class="col-mb-3">
                     <label class="form-label">imagenes del producto</label>
                     <input type="Hidden" name="MAX_FILE_SIZE" value="5120000">
-                    <input class="form-control" id ="Files" type="file" accept="image/*,.webp" name="imagenes[]" multiple>
+                    <input class="form-control" id ="Files" type="file" accept="image/*,.webp" name="imagenes[]" multiple required="">
                    
                   </div>
                 <div class="col-md-6">
