--- a/categorias.html
+++ b/categorias.html
@@ -4,12 +4,35 @@
     <meta charset="UTF-8">
     <!-- css de boostrap-->
     <link rel="stylesheet" href="bootstrap-5.1.0-dist/css/bootstrap.min.css">
-    <title>Document</title>
+    <!-- otros css-->
+    <link rel="stylesheet" href="css/categorias.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <title>S.I.V.E: busqueda</title>
 </head>
 <body>
+<header>
+    <script src="js/header.js"></script>
+</header>
+<section>
+    <div class="container-fluid">
+        <div class="row">
+            
 
+        </div>
+        <div class="row">
+            <div class="col">
+                ff
+            </div>
+        </div>
 
-    
+    </div>
+</section>
+
+<footer>
+    <script src="js/footer.js"></script>
+</footer>
+
     <!-- scripts de boostrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
     <script src="bootstrap-5.1.0-dist/js/bootstrap.min.js"></script>
