--- a/categorias.html
+++ b/categorias.html
@@ -24,6 +24,9 @@
             <div class="col">
                 ff
             </div>
+            <div class="col">
+                
+            </div>
         </div>
 
     </div>
