--- a/login E.html
+++ b/login E.html
@@ -30,10 +30,10 @@
           <ul class="nav nav-pills nav-fill">
             
             <li class="nav-item">
-              <a class="nav-link" href="login.html">Cliente</a>
+              <a class="nav-link" href="login.html">Cliente</a><!--? registro cliente o comun (actual)-->
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="login E.html">Empresa</a>
+              <a class="nav-link active" aria-current="page" href="login E.html">Empresa</a><!--* registro de empresa (actual)-->
             </li>
             
           </ul>
