prototipo de busqueda

--- a/login E.html
+++ b/login E.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+      <!--*script para elegir el header-->
        <script src="js/header.js"></script>
     </header>
 
@@ -62,16 +63,12 @@
               <br>
               <button type="submit" class="btn btn-outline-primary" onclick="location.href='register E.html'">Registrarse</button>
         </div>
-        <div class="container">
-            <p class="terminos">
-                licensias
-            </p>
-        </div>
+      
 
     </section>
     
 
-    <!--footer-->
+    <!--todo script de footer-->
     <footer>
       <script src="js/footer.js"></script>
     </footer>
