--- a/categorias.html
+++ b/categorias.html
@@ -23,9 +23,16 @@
             <ul class="menu">
               <li class="item">numero</li>
               <li class="item">
-                <select name="" id="" disabled="disabled">
-                  <option value="">m</option>
-                </select>
+                <div class="etiquetas-categorias">
+                  <label for="">categorias</label>
+                  <select name="" id="" disabled="disabled">
+                    <option value=""></option>
+                    <option value=""></option>
+                    <option value=""></option>
+                    <option value=""></option>
+                  </select>
+                </div>
+                
               </li>
               <li class="item"></li>
               <li class="item"></li>
