poniendo en practica comandos de AJAX

--- a/categorias.html
+++ b/categorias.html
@@ -23,7 +23,7 @@
           <div class="categorys">
             <ul class="menu">
               <li class="item">
-                <div class="buscados">
+                <div class="buscados" id="encontrados">
                   
                   <label for="">Encontrados</label>
                   <span class= "resultado">0</span>
@@ -38,9 +38,6 @@
                   <div class="col-sm-8">
                     <select name="" class="form-select" id="">
                       <option value="">Categorias</option>
-                      <option value=""></option>
-                      <option value=""></option>
-                      <option value=""></option>
                     </select>
                   </div>
                 </div> 
