cambios en el registro

--- a/register.html
+++ b/register.html
@@ -136,7 +136,7 @@
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
                 <label class="form-check-label" for="invalidCheck">
-                  Agregue los Terminos y Condiciones
+                  Agregue los y Condiciones
                 </label>
                 
                 <div class="invalid-feedback">
