problemas con el registro parte 2

--- a/categorias.html
+++ b/categorias.html
@@ -35,10 +35,8 @@
                   <div class="col-sm-2 col-form-label">
                     <label for="">Categorias</label>
                   </div>
-                  <div class="col-sm-8">
-                    <select name="" class="form-select" id="">
-                      <option value="">Categorias</option>
-                    </select>
+                  <div class="col-sm-8" id="selSeleccion" >
+                    
                   </div>
                 </div> 
               </li>
