--- a/login.html
+++ b/login.html
@@ -51,8 +51,8 @@
                 </div>
               <div class="form-floating">
                 
-              <input type="password" class="form-control" id ="validationCustom06" name="cont" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,20}" placeholder="" autofocus>
-              <label for="validationCustom06" class="form-label">Contraseña:</label>
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="cont" required pattern="{8,20}" autofocus>
+              <label for="floatingPassword" class="form-label">Contraseña:</label>
               <div class="valid-feedback">
                 OK!
               </div>
@@ -61,7 +61,7 @@
               </div>
               <!--*boton de mostrar-->
               <div class="Ms form-check">
-                <input class="form-check-input" type="checkbox" onclick="myFunction()" >
+                <input class="form-check-input" type="checkbox" onclick="myFunction2()" >
                 <label class="form-check-label">
                   Mostrar
                 </label>
