--- a/vender.html
+++ b/vender.html
@@ -153,7 +153,7 @@
                   </div>
                 <div class="col-12">
                   <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required name="terminos">
                     <label class="form-check-label" for="invalidCheck">
                       Acepto los Terminos y Condiciones
                     </label>
