--- a/vender.html
+++ b/vender.html
@@ -25,7 +25,7 @@
                   <!--* Al ingresar el required en el input nos enviará una alerta si detecta el campo vacio -->
                   <!--* Con el pattern="[a-z]{3,20}" restringimos los rangos de caracteres a chequear y solo letras -->
                   <!--* Autofus permite posicionar el cursos en un input al cargar el formulario -->
-                  <input type="text" class="form-control" id="validationCustom01" autofocus required pattern="[a-z]{10,25}" placeholder="ProductoX" name="nombre_producto">
+                  <input type="text" class="form-control" id="validationCustom01" autofocus required pattern="[a-zA-Z0-9]{5,50}" placeholder="ProductoX" name="nombre_producto">
                   <div class="valid-feedback">
                     Nombre OK!
                   </div>
