--- a/carrito.html
+++ b/carrito.html
@@ -9,20 +9,20 @@
     <link rel="stylesheet" href="css/productos.css">
     <link rel="stylesheet" href="css/footer.css">
 </head>
-<body>
+<body >
 
     <header>
         <script src="js/header.js"></script>
     </header>
-    <section class="MS container-fluid">
-
-        <!--titulo-->
-        <div class="lsc row justify-content-center">
-            <div class="col-4">
-                <h1 >Compras Del Carrito:</h1>
+    <section class="container">
+        <div class="row justify-content-between">
+            <div class="MS col" id="txtencargos">
+                
             </div>
-            
-        <h1>Usted no ha agregado ningún producto al carrito aun</h1>
+            <div class="col">
+
+            </div>
+        </div>
     </section>
 
 
