--- a/carrito.html
+++ b/carrito.html
@@ -9,14 +9,15 @@
     <link rel="stylesheet" href="css/productos.css">
     <link rel="stylesheet" href="css/footer.css">
 </head>
-<body >
+<body onload="">
 
     <header>
         <script src="js/header.js"></script>
+        <script src="js/funcionesP.js"></script>
     </header>
     <section class="container">
         <div class="row justify-content-between">
-            <div class="MS col" id="txtencargos">
+            <div class="MS col" id="Encargos">
                 
             </div>
             <div class="col">
