--- a/login E.html
+++ b/login E.html
@@ -39,7 +39,7 @@
           <br>
             <form action="php/login Em.php" method="post" class="row g-3 needs-validation" novalidate>
               <div class="form-floating mb-3"> 
-                <input type="text" name="email" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required placeholder="example@gmail.com" pattern="[a-zA-Z0-9._%+-]+@[a-z.-]+\.[a-z]{2,}$" autofocus>
+                <input type="text" name="email" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required placeholder="example@gmail.com" pattern="[a-zA-Z0-9._%+-\s]+@[a-z.-]+\.[a-z]{2,}$" autofocus>
                 <label for="validationCustomUsername" class="form-label">Email:</label> 
                 <div class="valid-feedback">
               
