Correcciones menores de la versión en inglès

--- a/Eng/register E.html
+++ b/Eng/register E.html
@@ -29,7 +29,7 @@
               <a class="nav-link" href="register.html">client</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="register E.html">Empresa</a>
+              <a class="nav-link active" aria-current="page" href="register E.html">Company</a>
             </li>
           </ul>
           <br>
@@ -50,7 +50,7 @@
               <!--* Al ingresar el required en el input nos enviará una alerta si detecta el campo vacio -->
               <!--* Con el pattern="[a-z]{3,20}" restringimos los rangos de caracteres a chequear y solo letras -->
               <!--* Autofus permite posicionar el cursos en un input al cargar el formulario -->
-              <input type="text" class="form-control" id="validationCustom01" value="" required pattern="[a-zA-Z0-9ñÑáéíóúÁÉÍÓÚ_-.\s]{3,20}" placeholder="Empresa 100" autofocus name="nomempresa">
+              <input type="text" class="form-control" id="validationCustom01" value="" required pattern="[a-zA-Z0-9ñÑáéíóúÁÉÍÓÚ_-.\s]{3,20}" placeholder="Company 100" autofocus name="nomempresa">
               <div class="valid-feedback">
                 Name Valido!
               </div>
@@ -60,7 +60,7 @@
             </div>
 
             <div class="col-md-6">
-              <label for="validationCustom02" class="form-label">Telefono:</label>
+              <label for="validationCustom02" class="form-label">Telephone:</label>
               <input type="text" name="telefono" class="form-control" id="validationCustom02" required placeholder="097132846" pattern="[0-9]{8,9}">
               <div class="valid-feedback">
                 OK!
