--- a/Eng/register.html
+++ b/Eng/register.html
@@ -64,12 +64,12 @@
                 Name OK!
               </div>
               <div class="invalid-feedback">
-                Los nombres solo pueden contener letras con un minimo de 3 caracteres
+                Name can only contain letters with a minimum of 3 characters
               </div>
             </div>
 
             <div class="col-md-4">
-              <label for="validationCustom03" class="form-label">Apellido:</label>
+              <label for="validationCustom03" class="form-label">Last name:</label>
               <input type="text" class="form-control" id="validationCustom03" value="" required pattern="[a-zA-ZñÑáéíóúÁÉÍÓÚ]{3,20}" placeholder="Torres" autofocus name="apellido">
               <div class="valid-feedback">
                 Last name OK!
