Correcciones ortográficas versión en inglés

--- a/Eng/index.html
+++ b/Eng/index.html
@@ -254,7 +254,7 @@
             <img src="img/producto.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="LSM card-title"><a href = "#" >Card title</a></h5>
-              <p class="card-text">description....</p>
+              <p class="card-text">Description....</p>
             </div>
             <div class="card-footer">
               <a href="#">Read more...</a>
@@ -264,7 +264,7 @@
             <img src="img/producto.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="LSM card-title"><a href = "#" >Card title</a></h5>
-              <p class="card-text">description....</p>
+              <p class="card-text">Description....</p>
             </div>
             <div class="card-footer">
               <a href="#">Read more...</a>
@@ -325,7 +325,7 @@
             <img src="img/producto.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="LSM card-title"><a href = "#" >Card title</a></h5>
-              <p class="card-text">Descripyion....</p>
+              <p class="card-text">Description....</p>
             </div>
             <div class="card-footer">
               <a href="#">Read more...</a>
