--- a/compra.html
+++ b/compra.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8">
     <!-- css de boostrap-->
     <link rel="stylesheet" href="bootstrap-5.1.0-dist/css/bootstrap.min.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/compra.css">
+    <title>Finalizar Mi Compra</title>
 </head>
 <body>
+    <header>
+        <script src="js/header.js"></script>
+        <script src="js/funcionesP.js"></script>
+    </header>
+    <section class="container-fluid">
+        <div class="row justify-content-between">
+            <form class="MS col-md-7 col-lg-7" id="RegistraC">
+                <p>fdsfdLorem ipsum dolor sit amet consectetur adipisicing elit. Similique adipisci inventore quidem facere sed beatae quas, harum ab debitis aliquam odio dolore? Veritatis itaque vel id libero earum cumque? Animi.</p>
+            </form>
+            
+            <div class="MS col-md-3 col-lg-3 order-md-last" id="Compra">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptatem ducimus exercitationem minima, voluptatum qui iusto dignissimos labore quis commodi aspernatur, dolorum repellendus harum quae expedita sequi numquam natus impedit.</p>
+            </div>
+        </div>
+        
 
+    </section>
+    <footer>
+        <script src="js/footer.js"></script>
+    </footer>
     <!-- scripts de boostrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
     <script src="bootstrap-5.1.0-dist/js/bootstrap.min.js"></script>
