--- a/compra.html
+++ b/compra.html
@@ -17,7 +17,7 @@
     </header>
     <section class="container-fluid">
         <div class="row justify-content-between">
-            <form class="MS col-md-7 col-lg-7" id="RegistraC">
+            <form class="MS col-md-7 col-lg-7" id="RegistraC" method="post" action="php/metodo.php">
                 
             </form>
             
